--- a/scroom/scroom.css
+++ b/scroom/scroom.css
@@ -2,16 +2,19 @@ div.scroom-block {
   display: block;
   width: 912px;
   height:465px;
+  position: absolute;
 }
 
 div.scroom-map {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   position: absolute;
 }
 div.scroom-map div.scroom-img{
   display: block;
-  width: 65em;
-  height: 33em;
+  width: 100%;
+  height: 100%;
   border: 1px solid #000000;
   background-repeat: no-repeat;
   background-position: center;
@@ -45,10 +48,20 @@ div.scroom-options span.scroom-area {
     position: absolute;
 }
 .square-detail {
-  position: absolute;
+  position: relative;
   background: red;
   border-radius: 6px;
   padding: 12px;
   margin-top: -70px;
   z-index: 9;
+  width: 150px;
+}
+span.arrow {
+  position: absolute;
+  bottom: -5px;
+  width: 0;
+  height: 0;
+  border-top: solid 5px red;
+  border-left: solid 5px transparent;
+  border-right: solid 5px transparent;
 }
